2005-05-12 Alain Magloire
	For the per file container, make sure we clean the project info.
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* model/org/eclipse/cdt/core/model/IPathEntryContaienrExtension.java

2005-05-10 Vladimir Hirsl
	Fix for PR 94500: [Path Entry] Problem marker: Invalid project path: DISCOVERED_SCANNER_INFO
	
	* model/org/eclipse/cdt/internal/core/model/PathEntryUtil.java
	
	Fix for infinite loop in LocationMap.createSoleLocation(..). Courtesy of John C.
	
	* parser/org/eclipse/cdt/internal/core/parser/scanner2/LoactionMap.java

2005-05-02 Vladimir Hirsl
	Fix for PR 92599: [Indexer] Remove annotation markers preference from DOMIndexer & friends
	Removed indexer problem markers property page block for DOMIndexer.
	Only inclusion not found preprocessor problem markers are going to be
	generated (there isn't an option in UI to disable/enable them yet).
	Also, fixed deleting of indexer problem markers when indexer is changed.
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexer.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/nullindexer/NullIndexer.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexer.java
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java

2005-05-02 Vladimir Hirsl
	Fix for PR 96762: DOM indexer misses some obvious symbols
		Fixed calculation of file locations for names inside macro definitions
		
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexEncoderUtil.java

2005-04-28 Alain Magloire
	Patch from Devlin Steffler
	FIXED 84606- CDT needs to take advantage of background refresh of projects
	* src/org/eclipse/cdt/core/CCorePlugin.java

2005-04-21 Vladimir Hirsl