@@ -67,3 +67,4 @@ PathEntryVariableResolver.0=CDT PathEntry variable not specified
 
 CTagsIndexMarker.fileMissing=CTags output file missing
 CTagsIndexMarker.CTagsMissing=CTags not installed or not in path
+DOMIndexerMarker.EmptyScannerInfo=File not indexed because it was not built
